-------------------------
4.6.0 XXOCT19
-------------------------
- Added support for tags on Open, SMS, Email, and Web channels.

-------------------------
4.5.0 25OCT19
-------------------------
- Updated to Jackson to versions 2.9.10 due to security vulnerability in jackson core.
- Added support for EU URI in UrbanAirshipClient.

-------------------------
4.4.0 13AUG19
-------------------------
- Added support for no_throttle push option.
- Updated to Jackson Databind version 2.9.9.2 due to security vulnerability.

-------------------------
4.3.0 05JUL19
-------------------------
- Added support for scheduled template pushes.
- Added additional android push payload fields.
- Updated maven compiler plugin to 3.8.1.

-------------------------
4.2.0 24MAY19
-------------------------
- Updated to Jackson version 2.9.9 due to security vulnerability.
- Added Named User field to channel lookups.

-------------------------
4.1.0 26MAR19
-------------------------
- Added support for Response reporting.
- Added support for Devices reporting.
- Added support for more iOS alert extras.
- Updated to Jackson version 2.9.8 due to security vulnerability.
- Fixed an issue with handling request errors from the template API.
- Updated RequestError parsing to handle additional white spaces.

-------------------------
4.0.2 11DEC18
-------------------------
- Fixed a crash when using SMS create and send.

-------------------------
4.0.1 10DEC18
-------------------------
- Fixed a crash when using create and send templates.

-------------------------
4.0.0 10DEC18
-------------------------
- Added support for eMail create and send.
- Added support for sms create and send.
- Added support for sms notifications.
- Added support for email notifications.
- Updated to guava version 27.0-jre.
- Removed the deprecated device type 'all'.

-------------------------
3.3.0 30OCT18
-------------------------
- Added support for SMS registrations.
- Updated to Jackson version 2.9.7.